<resources>
    <string name="set_updata_key_title">更新设置</string>
    <string name="set_updata_title">手动监测更新</string>
    <string name="set_updata_summary">马上进行手动更新</string>
    <string name="set_search_key_title">搜索设置</string>
    <string name="set_search_title">搜索结果数量</string>
    <string name="set_search_summary">只能为5的倍数，最大为30</string>
    <string name="set_search_num_summary">当前搜索结果每次显示:</string>
    <string name="set_history_key_title">历史记录设置</string>
    <string name="set_history_title">清除缓存</string>
    <string name="set_history_summary">当前缓存大小为：</string>
    <string name="set_net_key_title">网络设置</string>
    <string name="set_net_title">网络设置</string>
    <string name="set_net_summary">配置网络链接方式</string>
    <string name="set_history_alert">是否清除缓存？</string>
    <string name="app_name">掌上1号店</string>
    <string name="loading_net">加载中,请稍候...</string>
    <string name="net_null">网络异常，请检查网络配置后，重新操作</string>
    <string name="net_retry">网络异常，请重试！</string>
    <string name="updata_old">您的系统已经是最新版本！</string>
    <string name="updata_title">软件更新</string>
    <string name="updata_ok">立即更新</string>
    <string name="updata_no">退出</string>
    <string name="updata_cancel">取消</string>
    <string name="down_title_success">下载完成</string>
    <string name="down_title_fail">下载失败</string>
    <string name="down_content_fail">下载过程中出现错误，请重新下载!</string>
    <string name="down_content">新版掌上1号店下载完成，请点击安装!</string>
    <string name="reset">重新加载</string>
    <string name="timeout">抱歉，由于网络响应较慢，请选择操作！</string>
    <string name="menu_mystore">我的1号店</string>
    <string name="menu_message">消息</string>
    <string name="menu_setup">设置</string>
    <string name="menu_about">关于</string>
    <string name="menu_exit">退出</string>
    <string name="menu_return">返回</string>
    <string name="menu_research">重新搜索</string>
    <string name="menu_continuetobuy">继续购物</string>
    <string name="menu_favorite">收藏</string>
    <string name="menu_share">分享</string>
    <string name="menu_scan">重新扫描</string>
    <string name="menu_search">搜索</string>
    <string name="menu_buy">购买</string>
    <string name="menu_find">查找</string>
    <string name="menu_deleteall">清空</string>
    <string name="menu_forward">转发</string>
    <string name="menu_delete">删除</string>
    <string name="menu_regist">注册</string>
    <string name="menu_forget">忘记密码</string>
    <string name="menu_login">登录</string>
    <string name="menu_myorder">订单</string>
    <string name="menu_logout">退出帐号</string>
    <string name="menu_checkout">结算</string>
    <string name="menu_submitorder">下订单</string>
    <string name="menu_cancel">取消</string>
    <string name="menu_addreceiver">添加送货地址</string>
    <string name="menu_edit">重新编辑</string>
    <string name="menu_help">帮助</string>
    <string name="menu_detail">简介</string>
    <string name="menu_description">描述</string>
    <string name="menu_comment">评价</string>
    <string name="menu_manual">手动输入</string>
    <string name="load_init">网络初始化......</string>
    <string name="load_fail">服务器连接失败！</string>
    <string name="load_success">检测到可用网络，初始化成功</string>
    <string name="load_alert_title">提示</string>
    <string name="load_alert_msg">网络出错，请检查网络配置</string>
    <string name="loading_server">连接服务器中......</string>
    <string name="loading">启动中......</string>
    <string name="loading_exit">退出</string>
    <string name="loading_retry">重试</string>
    <string name="loading_update">检查版本中......</string>
    <string name="message_title">我的消息</string>
    <string name="message_list_title">我的消息()</string>
    <string name="message_all">全 部</string>
    <string name="message_system">系统消息</string>
    <string name="message_private">个人消息</string>
    <string name="message_forward">转 发</string>
    <string name="message_del">删 除</string>
    <string name="message_del_sucess">删除成功！</string>
    <string name="message_del_fail">删除失败！</string>
    <string name="mystore_title">我的1号店</string>
    <string name="mystore_change_password">修改密码</string>
    <string name="mystore_address">送货地址</string>
    <string name="mystore_current_order">最近订单</string>
    <string name="mystore_favorite">收藏</string>
    <string name="mystore_order_id">订单编号：</string>
    <string name="mystore_detail">详情</string>
    <string name="mystore_buy">购买</string>
    <string name="mystore_order_null">暂无订单，<font color="#9E0000">马上去挑选</font></string>
    <string name="mystore_favorite_null">暂无收藏，<font color="#9E0000">马上去挑选</font></string>
    <string name="mystore_logout">退出帐号</string>
    <string name="mystore_logout_success">成功退出帐号！</string>
    <string name="mystore_logout_fail">退出失败！</string>
    <string name="mystore_logout_title">确定要退出帐号?</string>
    <string name="bottom_home">首页</string>
    <string name="bottom_search">搜索</string>
    <string name="bottom_shopcar">购物车</string>
    <string name="bottom_msg">信息</string>
    <string name="bottom_more">更多</string>
    <string name="order_checkorder_title_str">检查订单</string>
    <string name="order_createorder_btn_str">下订单</string>
    <string name="order_cancel_btn_str">取 消</string>
    <string name="order_sendto_title_str">送货至</string>
    <string name="order_senddetail_title_str">发货详细信息</string>
    <string name="order_sendtyle_title_str">快递送货上门</string>
    <string name="order_sendtime_title_str">预计发货时间：1天内</string>
    <string name="order_paytype_title_str">付款方式</string>
    <string name="order_paytype_str">货到付款支付</string>
    <string name="order_paytype_usecoupon_str">使用抵用券：</string>
    <string name="coupon_use_rule_str">使用说明：全场商品满50元使用</string>
    <string name="myorder_title_str">我的订单</string>
    <string name="myoder_nullorder_str">暂无订单</string>
    <string name="orderdetail_title_str">订单详情</string>
    <string name="orderdetail_ordercode_str">订单编号：</string>
    <string name="orderdetail_productcount_str">总数量：</string>
    <string name="orderdetail_productamount_str">合计：</string>
    <string name="orderdetail_receiveinfo_str">收货人信息</string>
    <string name="orderdetail_deliverymethod_str">送货方式</string>
    <string name="orderdetail_paymethod_str">付款方式</string>
    <string name="order_goodreceiver_title_str">送货地址</string>
    <string name="order_addressedit_title_str">送货地址编辑</string>
    <string name="order_goodreceiver_btn_str">添加送货地址</string>
    <string name="order_receivename_str">收货人</string>
    <string name="order_contury_str">区域</string>
    <string name="order_address_str">详细地址</string>
    <string name="order_postcode_str">邮政编码</string>
    <string name="order_receivermobile_str">手机</string>
    <string name="order_receiverphone_str">电话</string>
    <string name="order_editaddress_okbtn_str">确 定</string>
    <string name="order_address_updatebtn_str">更新</string>
    <string name="order_receiver_delete_suggestion">您是否要删除该地址？</string>
    <string name="order_invoice_title_str">发票开具</string>
    <string name="order_invoice_desc_str">数码、手机、小家电类商品系统将默认打印出商品全称，若您订单中包含其它类商品，请在下列发票内容中选择。</string>
    <string name="order_invoice_name_str">发票抬头</string>
    <string name="order_invoice_content_str">发票内容</string>
    <string name="order_invoice_amount_str">金额</string>
    <string name="order_invoice_okbtn_str">确 认</string>
    <string name="order_coupon_title_str">使用抵用券</string>
    <string name="order_coupon_title01_str">请输入您手中的抵用券编码：</string>
    <string name="order_coupon_usebtn_str">使用</string>
    <string name="order_coupon_title02">抵用券：￥</string>
    <string name="order_coupon_amount_str">抵用券：</string>
    <string name="order_coupon_title03">可用抵用券：</string>
    <string name="favorite_title">我的收藏</string>
    <string name="favorite_sucess">收藏成功!</string>
    <string name="favorite_fail">收藏失败!</string>
    <string name="favorite_exist">产品已经存在</string>
    <string name="favorite_del_message">是否确定删除该收藏!</string>
    <string name="favorite_null">"您还没收藏商品呢！
马上去挑选中意的商品，加入购物车吧！"</string>
    <string name="favorite_null_btn">去挑选</string>
    <string name="userland_title">登 录</string>
    <string name="userland_user">用户名/邮箱：</string>
    <string name="userland_password">密码：</string>
    <string name="userland_remember">记住我</string>
    <string name="userland_regist">新用户注册</string>
    <string name="userland_forget_password">忘记密码</string>
    <string name="userland_user_isempty">用户名不能为空</string>
    <string name="userland_password_isempty">密码不能为空</string>
    <string name="userland_user_not">用户不存在</string>
    <string name="userland_password_not">密码不正确</string>
    <string name="userland_true">登录成功！</string>
    <string name="regist_title">注册</string>
    <string name="regist_mail">邮箱地址：</string>
    <string name="regist_secondpass">确认密码：</string>
    <string name="regist_submit">提交注册</string>
    <string name="regist_email_not_correct">请输入正确的Email地址</string>
    <string name="regist_not_equal">两次密码不一致</string>
    <string name="regist_user_text">(6-16字母或数字组成)</string>
    <string name="regist_true">注册成功！</string>
    <string name="regist_user_format_net">用户名格式错误</string>
    <string name="regist_pass_format_net">密码由大小写英文字母、数字组成，长度6－20位</string>
    <string name="regist_user_true_net">用户不存在</string>
    <string name="regist_code_error_net">您输入的验证码不对，请重新输入</string>
    <string name="regist_user_more">注册用户太多</string>
    <string name="regist_success_buybtn_str">开始购物</string>
    <string name="regist_success_mystore_str">我的1号店</string>
    <string name="regist_success_msg_str">"恭喜您注册成功！
您注册的邮箱是"</string>
    <string name="forget_title">忘记密码</string>
    <string name="forget_content_title">忘记密码了？</string>
    <string name="forget_content">只须输入您的用户名或邮箱，即可轻松取回！</string>
    <string name="forget_user">用户名或邮箱：</string>
    <string name="forget_ver_code">验证码：</string>
    <string name="forget_ver_change">换一张</string>
    <string name="forget_ok">确 定</string>
    <string name="forget_code_isempty">请输入验证码</string>
    <string name="forget_code_not_equal">验证码错误，请重新输入</string>
    <string name="forget_find_true">我们已将密码发送至您的邮箱，请查收</string>
    <string name="modify_oldpwd_str">原始密码：</string>
    <string name="modify_newpwd_str">新密码：</string>
    <string name="modify_checkpwd_str">确认密码：</string>
    <string name="modify_pwd_suggestion_str">(6-20位，大小写英文字母，数字组成)</string>
    <string name="modify_pwd_okbtn_str">提交修改</string>
    <string name="exit_title">提醒</string>
    <string name="exit_content">您是否要退出掌上1号店?</string>
    <string name="exit_yes">是</string>
    <string name="exit_no">否</string>
    <string name="home_search">搜索</string>
    <string name="home_dialog_title">选择您的收货省份</string>
    <string name="home_dialog_close">[关闭]</string>
    <string name="home_dialog_huadong">华东地区</string>
    <string name="home_dialog_huabei">华北地区</string>
    <string name="home_dialog_huanan">华南西南</string>
    <string name="home_dialog_huazhong">华中西北</string>
    <string name="promotion_title">优惠促销</string>
    <string name="productdetail_scan_title">您扫描的商品是：</string>
    <string name="productdetail_market_price_str">市场价 ：</string>
    <string name="productdetail_price_str">1 号 价 ：</string>
    <string name="productdetail_quantity_str">数　量 ：</string>
    <string name="productdetail_stocks_str">现在有货</string>
    <string name="productdetail_outofstock_str">暂时缺货</string>
    <string name="productdetail_buy_btn">购　买</string>
    <string name="productdetail_favorite_btn">收藏</string>
    <string name="productdetail_share_btn">分享</string>
    <string name="productdetail_order">立即购买</string>
    <string name="productdetail_cart">加入购物</string>
    <string name="productdetail_favorite">加入收藏</string>
    <string name="productdetail_title">商品详情</string>
    <string name="productdetail_introduction">简介</string>
    <string name="productdetail_descroption">描述</string>
    <string name="barcode_exit">返　回</string>
    <string name="barcode_scan_btn">手动输入</string>
    <string name="barcode_submit">提　交</string>
    <string name="barcode_text_title">手动输入条码编号：</string>
    <string name="barcode_text_content">(如条码无法识别,请手动输入条码编号)</string>
    <string name="msg_default_status">条码与扫描间距10CM左右，避免反光和阴影请将扫描框对准条形码</string>
</resources>