<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:btn="http://schemas.android.com/apk/res/com.thestore.main"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/mystore_moreorder_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0px" android:layout_marginTop="10.0px" android:layout_marginRight="10.0px" android:layout_marginBottom="10.0px">
        <TextView android:textSize="16.0px" android:textColor="#ff734d01" android:id="@id/mystore_order" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mystore_current_order" android:layout_weight="1.0" />
        <TextView android:textSize="14.0px" android:textColor="#ff734d01" android:id="@id/mystore_order_more" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bottom_more" />
        <ImageView android:id="@id/mystore_right_img_order" android:background="@drawable/right_arrow" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <View android:background="#ffdfca9f" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <LinearLayout android:orientation="horizontal" android:id="@id/mystore_order_null" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0px" android:layout_marginTop="10.0px" android:layout_marginRight="10.0px" android:layout_marginBottom="14.0px">
        <TextView android:textSize="14.0px" android:textColor="#ff734d01" android:id="@id/mystore_order_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mystore_order_null" />
        <ImageView android:id="@id/mystore_right_img" android:background="@drawable/right_arrow" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/mystore_order_full" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0px" android:layout_marginTop="10.0px" android:layout_marginBottom="10.0px" android:layout_weight="3.0">
            <TextView android:textSize="14.0px" android:textColor="#ff333333" android:id="@id/mystore_order_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mystore_order_id" />
            <TextView android:textSize="14.0px" android:textColor="#ffa20000" android:id="@id/mystore_order_price" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="14.0px" android:textColor="#ff333333" android:id="@id/mystore_order_time" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <Button android:layout_gravity="center_vertical" android:id="@id/mystore_order_status" android:focusable="false" android:layout_width="25.0px" android:layout_height="25.0px" android:layout_marginRight="10.0px" />
    </LinearLayout>
</LinearLayout>
